# slidegeist

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
scripts/: setup-local-llm.sh  setup-voxtype-stt.sh
slidegeist/: ai_description.py  cli.py  constants.py  export.py  ocr.py  pdf.py  pipeline.py  services.py  transcribe.py
tests/: test_export.py  test_integration.py  test_ocr_utils.py  test_pdf.py
